# polars-financial

./: README.md  pyproject.toml
polars_financial/: metrics.py
polars_financial/test/: test_metrics.py
polarsfolio/: metrics.py
polarsfolio/test/: test_metrics.py
