[tool.poetry]
name = "polarsfolio"
version = "0.1.0"
description = ""
authors = ["mark.wang <wxgter@gmail.com>"]
packages = [{ include = "polarsfolio" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
polars = "^1.6.0"
altair = "^5.4.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.group.test.dependencies]
empyrical = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
